@@ -1,6 +1,7 @@
 /* Objective-C language support routines for GDB, the GNU debugger.
 
-   Copyright (C) 2002-2013 Free Software Foundation, Inc.
+   Copyright (C) 2002, 2003, 2004, 2005, 2007, 2008, 2009, 2010, 2011
+   Free Software Foundation, Inc.
 
    Contributed by Apple Computer, Inc.
    Written by Michael Snyder.
@@ -82,7 +83,7 @@ static const struct objfile_data *objc_objfile_data;
    suitably defined.  */
 
 struct symbol *
-lookup_struct_typedef (char *name, const struct block *block, int noerr)
+lookup_struct_typedef (char *name, struct block *block, int noerr)
 {
   struct symbol *sym;
 
@@ -282,6 +283,160 @@ objc_demangle (const char *mangled, int options)
     return NULL;	/* Not an objc mangled name.  */
 }
 
+/* Print the character C on STREAM as part of the contents of a
+   literal string whose delimiter is QUOTER.  Note that that format
+   for printing characters and strings is language specific.  */
+
+static void
+objc_emit_char (int c, struct type *type, struct ui_file *stream, int quoter)
+{
+  c &= 0xFF;			/* Avoid sign bit follies.  */
+
+  if (PRINT_LITERAL_FORM (c))
+    {
+      if (c == '\\' || c == quoter)
+	{
+	  fputs_filtered ("\\", stream);
+	}
+      fprintf_filtered (stream, "%c", c);
+    }
+  else
+    {
+      switch (c)
+	{
+	case '\n':
+	  fputs_filtered ("\\n", stream);
+	  break;
+	case '\b':
+	  fputs_filtered ("\\b", stream);
+	  break;
+	case '\t':
+	  fputs_filtered ("\\t", stream);
+	  break;
+	case '\f':
+	  fputs_filtered ("\\f", stream);
+	  break;
+	case '\r':
+	  fputs_filtered ("\\r", stream);
+	  break;
+	case '\033':
+	  fputs_filtered ("\\e", stream);
+	  break;
+	case '\007':
+	  fputs_filtered ("\\a", stream);
+	  break;
+	default:
+	  fprintf_filtered (stream, "\\%.3o", (unsigned int) c);
+	  break;
+	}
+    }
+}
+
+static void
+objc_printchar (int c, struct type *type, struct ui_file *stream)
+{
+  fputs_filtered ("'", stream);
+  objc_emit_char (c, type, stream, '\'');
+  fputs_filtered ("'", stream);
+}
+
+/* Print the character string STRING, printing at most LENGTH
+   characters.  Printing stops early if the number hits print_max;
+   repeat counts are printed as appropriate.  Print ellipses at the
+   end if we had to stop before printing LENGTH characters, or if
+   FORCE_ELLIPSES.  */
+
+static void
+objc_printstr (struct ui_file *stream, struct type *type,
+	       const gdb_byte *string, unsigned int length,
+	       const char *encoding, int force_ellipses,
+	       const struct value_print_options *options)
+{
+  unsigned int i;
+  unsigned int things_printed = 0;
+  int in_quotes = 0;
+  int need_comma = 0;
+
+  /* If the string was not truncated due to `set print elements', and
+     the last byte of it is a null, we don't print that, in
+     traditional C style.  */
+  if ((!force_ellipses) && length > 0 && string[length-1] == '\0')
+    length--;
+
+  if (length == 0)
+    {
+      fputs_filtered ("\"\"", stream);
+      return;
+    }
+
+  for (i = 0; i < length && things_printed < options->print_max; ++i)
+    {
+      /* Position of the character we are examining to see whether it
+	 is repeated.  */
+      unsigned int rep1;
+      /* Number of repetitions we have detected so far.  */
+      unsigned int reps;
+
+      QUIT;
+
+      if (need_comma)
+	{
+	  fputs_filtered (", ", stream);
+	  need_comma = 0;
+	}
+
+      rep1 = i + 1;
+      reps = 1;
+      while (rep1 < length && string[rep1] == string[i])
+	{
+	  ++rep1;
+	  ++reps;
+	}
+
+      if (reps > options->repeat_count_threshold)
+	{
+	  if (in_quotes)
+	    {
+	      if (options->inspect_it)
+		fputs_filtered ("\\\", ", stream);
+	      else
+		fputs_filtered ("\", ", stream);
+	      in_quotes = 0;
+	    }
+	  objc_printchar (string[i], type, stream);
+	  fprintf_filtered (stream, " <repeats %u times>", reps);
+	  i = rep1 - 1;
+	  things_printed += options->repeat_count_threshold;
+	  need_comma = 1;
+	}
+      else
+	{
+	  if (!in_quotes)
+	    {
+	      if (options->inspect_it)
+		fputs_filtered ("\\\"", stream);
+	      else
+		fputs_filtered ("\"", stream);
+	      in_quotes = 1;
+	    }
+	  objc_emit_char (string[i], type, stream, '"');
+	  ++things_printed;
+	}
+    }
+
+  /* Terminate the quotes if necessary.  */
+  if (in_quotes)
+    {
+      if (options->inspect_it)
+	fputs_filtered ("\\\"", stream);
+      else
+	fputs_filtered ("\"", stream);
+    }
+
+  if (force_ellipses || i < length)
+    fputs_filtered ("...", stream);
+}
+
 /* Determine if we are currently in the Objective-C dispatch function.
    If so, get the address of the method function that the dispatcher
    would call and use that as the function to step into instead.  Also
@@ -355,21 +510,21 @@ const struct language_defn objc_language_defn = {
   "objective-c",		/* Language name */
   language_objc,
   range_check_off,
+  type_check_off,
   case_sensitive_on,
   array_row_major,
   macro_expansion_c,
   &exp_descriptor_standard,
-  c_parse,
-  c_error,
+  objc_parse,
+  objc_error,
   null_post_parser,
-  c_printchar,		       /* Print a character constant */
-  c_printstr,		       /* Function to print string constant */
-  c_emit_char,
+  objc_printchar,		/* Print a character constant */
+  objc_printstr,		/* Function to print string constant */
+  objc_emit_char,
   c_print_type,			/* Print a type using appropriate syntax */
   c_print_typedef,		/* Print a typedef using appropriate syntax */
   c_val_print,			/* Print a value using appropriate syntax */
   c_value_print,		/* Print a top-level value */
-  default_read_var_value,	/* la_read_var_value */
   objc_skip_trampoline, 	/* Language specific skip_trampoline */
   "self",		        /* name_of_this */
   basic_lookup_symbol_nonlocal,	/* lookup_symbol_nonlocal */
@@ -386,8 +541,6 @@ const struct language_defn objc_language_defn = {
   default_print_array_index,
   default_pass_by_reference,
   default_get_string,
-  NULL,				/* la_get_symbol_name_cmp */
-  iterate_over_symbols,
   LANG_MAGIC
 };
 
@@ -482,14 +635,14 @@ end_msglist(void)
 }
 
 /*
- * Function: specialcmp (const char *a, const char *b)
+ * Function: specialcmp (char *a, char *b)
  *
  * Special strcmp: treats ']' and ' ' as end-of-string.
  * Used for qsorting lists of objc methods (either by class or selector).
  */
 
 static int
-specialcmp (const char *a, const char *b)
+specialcmp (char *a, char *b)
 {
   while (*a && *a != ' ' && *a != ']' && *b && *b != ' ' && *b != ']')
     {
@@ -514,7 +667,7 @@ specialcmp (const char *a, const char *b)
 static int
 compare_selectors (const void *a, const void *b)
 {
-  const char *aname, *bname;
+  char *aname, *bname;
 
   aname = SYMBOL_PRINT_NAME (*(struct symbol **) a);
   bname = SYMBOL_PRINT_NAME (*(struct symbol **) b);
@@ -543,7 +696,7 @@ selectors_info (char *regexp, int from_tty)
 {
   struct objfile	*objfile;
   struct minimal_symbol *msymbol;
-  const char            *name;
+  char                  *name;
   char                  *val;
   int                    matches = 0;
   int                    maxlen  = 0;
@@ -608,8 +761,8 @@ selectors_info (char *regexp, int from_tty)
 	    }
 	  if (regexp == NULL || re_exec(++name) != 0)
 	    { 
-	      const char *mystart = name;
-	      const char *myend   = strchr (mystart, ']');
+	      char *mystart = name;
+	      char *myend   = (char *) strchr (mystart, ']');
 	      
 	      if (myend && (myend - mystart > maxlen))
 		maxlen = myend - mystart;	/* Get longest selector.  */
@@ -680,7 +833,7 @@ selectors_info (char *regexp, int from_tty)
 static int
 compare_classes (const void *a, const void *b)
 {
-  const char *aname, *bname;
+  char *aname, *bname;
 
   aname = SYMBOL_PRINT_NAME (*(struct symbol **) a);
   bname = SYMBOL_PRINT_NAME (*(struct symbol **) b);
@@ -705,7 +858,7 @@ classes_info (char *regexp, int from_tty)
 {
   struct objfile	*objfile;
   struct minimal_symbol *msymbol;
-  const char            *name;
+  char                  *name;
   char                  *val;
   int                    matches = 0;
   int                    maxlen  = 0;
@@ -747,8 +900,8 @@ classes_info (char *regexp, int from_tty)
 	if (regexp == NULL || re_exec(name+2) != 0)
 	  { 
 	    /* Compute length of classname part.  */
-	    const char *mystart = name + 2;
-	    const char *myend   = strchr (mystart, ' ');
+	    char *mystart = name + 2;
+	    char *myend   = (char *) strchr(mystart, ' ');
 	    
 	    if (myend && (myend - mystart > maxlen))
 	      maxlen = myend - mystart;
@@ -799,7 +952,49 @@ classes_info (char *regexp, int from_tty)
     printf_filtered (_("No classes matching \"%s\"\n"), regexp ? regexp : "*");
 }
 
-static char * 
+/* 
+ * Function: find_imps (char *selector, struct symbol **sym_arr)
+ *
+ * Input:  a string representing a selector
+ *         a pointer to an array of symbol pointers
+ *         possibly a pointer to a symbol found by the caller.
+ *
+ * Output: number of methods that implement that selector.  Side
+ * effects: The array of symbol pointers is filled with matching syms.
+ *
+ * By analogy with function "find_methods" (symtab.c), builds a list
+ * of symbols matching the ambiguous input, so that "decode_line_2"
+ * (symtab.c) can list them and ask the user to choose one or more.
+ * In this case the matches are objective c methods
+ * ("implementations") matching an objective c selector.
+ *
+ * Note that it is possible for a normal (c-style) function to have
+ * the same name as an objective c selector.  To prevent the selector
+ * from eclipsing the function, we allow the caller (decode_line_1) to
+ * search for such a function first, and if it finds one, pass it in
+ * to us.  We will then integrate it into the list.  We also search
+ * for one here, among the minsyms.
+ *
+ * NOTE: if NUM_DEBUGGABLE is non-zero, the sym_arr will be divided
+ *       into two parts: debuggable (struct symbol) syms, and
+ *       non_debuggable (struct minimal_symbol) syms.  The debuggable
+ *       ones will come first, before NUM_DEBUGGABLE (which will thus
+ *       be the index of the first non-debuggable one).
+ */
+
+/*
+ * Function: total_number_of_imps (char *selector);
+ *
+ * Input:  a string representing a selector 
+ * Output: number of methods that implement that selector.
+ *
+ * By analogy with function "total_number_of_methods", this allows
+ * decode_line_1 (symtab.c) to detect if there are objective c methods
+ * matching the input, and to allocate an array of pointers to them
+ * which can be manipulated by "decode_line_2" (also in symtab.c).
+ */
+
+char * 
 parse_selector (char *method, char **selector)
 {
   char *s1 = NULL;
@@ -855,7 +1050,7 @@ parse_selector (char *method, char **selector)
   return s2;
 }
 
-static char * 
+char * 
 parse_method (char *method, char *type, char **class, 
 	      char **category, char **selector)
 {
@@ -959,28 +1154,38 @@ parse_method (char *method, char *type, char **class,
 }
 
 static void
-find_methods (char type, const char *class, const char *category, 
-	      const char *selector,
-	      VEC (const_char_ptr) **symbol_names)
+find_methods (struct symtab *symtab, char type, 
+	      const char *class, const char *category, 
+	      const char *selector, struct symbol **syms, 
+	      unsigned int *nsym, unsigned int *ndebug)
 {
   struct objfile *objfile = NULL;
+  struct minimal_symbol *msymbol = NULL;
+  struct block *block = NULL;
+  struct symbol *sym = NULL;
 
-  const char *symname = NULL;
+  char *symname = NULL;
 
   char ntype = '\0';
   char *nclass = NULL;
   char *ncategory = NULL;
   char *nselector = NULL;
 
+  unsigned int csym = 0;
+  unsigned int cdebug = 0;
+
   static char *tmp = NULL;
   static unsigned int tmplen = 0;
 
-  gdb_assert (symbol_names != NULL);
+  gdb_assert (nsym != NULL);
+  gdb_assert (ndebug != NULL);
+
+  if (symtab)
+    block = BLOCKVECTOR_BLOCK (BLOCKVECTOR (symtab), STATIC_BLOCK);
 
   ALL_OBJFILES (objfile)
     {
       unsigned int *objc_csym;
-      struct minimal_symbol *msymbol = NULL;
 
       /* The objfile_csym variable counts the number of ObjC methods
 	 that this objfile defines.  We save that count as a private
@@ -996,6 +1201,9 @@ find_methods (char type, const char *class, const char *category,
 
       ALL_OBJFILE_MSYMBOLS (objfile, msymbol)
 	{
+	  struct gdbarch *gdbarch = get_objfile_arch (objfile);
+	  CORE_ADDR pc = SYMBOL_VALUE_ADDRESS (msymbol);
+
 	  QUIT;
 
 	  /* Check the symbol name first as this can be done entirely without
@@ -1008,7 +1216,17 @@ find_methods (char type, const char *class, const char *category,
 	    /* Not a method name.  */
 	    continue;
 
+	  /* The minimal symbol might point to a function descriptor;
+	     resolve it to the actual code address instead.  */
+	  pc = gdbarch_convert_from_func_ptr_addr (gdbarch, pc,
+						   &current_target);
+
 	  objfile_csym++;
+
+	  if (symtab)
+	    if (pc < BLOCK_START (block) || pc >= BLOCK_END (block))
+	      /* Not in the specified symtab.  */
+	      continue;
 
 	  /* Now that thinks are a bit sane, clean up the symname.  */
 	  while ((strlen (symname) + 1) >= tmplen)
@@ -1037,9 +1255,41 @@ find_methods (char type, const char *class, const char *category,
 	      ((nselector == NULL) || (strcmp (selector, nselector) != 0)))
 	    continue;
 
-	  VEC_safe_push (const_char_ptr, *symbol_names, symname);
+	  sym = find_pc_function (pc);
+	  if (sym != NULL)
+	    {
+	      const char *newsymname = SYMBOL_NATURAL_NAME (sym);
+	  
+	      if (strcmp (symname, newsymname) == 0)
+		{
+		  /* Found a high-level method sym: swap it into the
+		     lower part of sym_arr (below num_debuggable).  */
+		  if (syms != NULL)
+		    {
+		      syms[csym] = syms[cdebug];
+		      syms[cdebug] = sym;
+		    }
+		  csym++;
+		  cdebug++;
+		}
+	      else
+		{
+		  warning (
+"debugging symbol \"%s\" does not match minimal symbol (\"%s\"); ignoring",
+                           newsymname, symname);
+		  if (syms != NULL)
+		    syms[csym] = (struct symbol *) msymbol;
+		  csym++;
+		}
+	    }
+	  else
+	    {
+	      /* Found a non-debuggable method symbol.  */
+	      if (syms != NULL)
+		syms[csym] = (struct symbol *) msymbol;
+	      csym++;
+	    }
 	}
-
       if (objc_csym == NULL)
 	{
 	  objc_csym = obstack_alloc (&objfile->objfile_obstack,
@@ -1051,79 +1301,38 @@ find_methods (char type, const char *class, const char *category,
 	/* Count of ObjC methods in this objfile should be constant.  */
 	gdb_assert (*objc_csym == objfile_csym);
     }
+
+  if (nsym != NULL)
+    *nsym = csym;
+  if (ndebug != NULL)
+    *ndebug = cdebug;
 }
 
-/* Uniquify a VEC of strings.  */
-
-static void
-uniquify_strings (VEC (const_char_ptr) **strings)
-{
-  int ix;
-  const char *elem, *last = NULL;
-  int out;
-
-  qsort (VEC_address (const_char_ptr, *strings),
-	 VEC_length (const_char_ptr, *strings),
-	 sizeof (const_char_ptr),
-	 compare_strings);
-  out = 0;
-  for (ix = 0; VEC_iterate (const_char_ptr, *strings, ix, elem); ++ix)
-    {
-      if (last == NULL || strcmp (last, elem) != 0)
-	{
-	  /* Keep ELEM.  */
-	  VEC_replace (const_char_ptr, *strings, out, elem);
-	  ++out;
-	}
-      last = elem;
-    }
-  VEC_truncate (const_char_ptr, *strings, out);
-}
-
-/* 
- * Function: find_imps (char *selector, struct symbol **sym_arr)
- *
- * Input:  a string representing a selector
- *         a pointer to an array of symbol pointers
- *         possibly a pointer to a symbol found by the caller.
- *
- * Output: number of methods that implement that selector.  Side
- * effects: The array of symbol pointers is filled with matching syms.
- *
- * By analogy with function "find_methods" (symtab.c), builds a list
- * of symbols matching the ambiguous input, so that "decode_line_2"
- * (symtab.c) can list them and ask the user to choose one or more.
- * In this case the matches are objective c methods
- * ("implementations") matching an objective c selector.
- *
- * Note that it is possible for a normal (c-style) function to have
- * the same name as an objective c selector.  To prevent the selector
- * from eclipsing the function, we allow the caller (decode_line_1) to
- * search for such a function first, and if it finds one, pass it in
- * to us.  We will then integrate it into the list.  We also search
- * for one here, among the minsyms.
- *
- * NOTE: if NUM_DEBUGGABLE is non-zero, the sym_arr will be divided
- *       into two parts: debuggable (struct symbol) syms, and
- *       non_debuggable (struct minimal_symbol) syms.  The debuggable
- *       ones will come first, before NUM_DEBUGGABLE (which will thus
- *       be the index of the first non-debuggable one).
- */
-
-char *
-find_imps (char *method, VEC (const_char_ptr) **symbol_names)
+char *find_imps (struct symtab *symtab, struct block *block,
+		 char *method, struct symbol **syms, 
+		 unsigned int *nsym, unsigned int *ndebug)
 {
   char type = '\0';
   char *class = NULL;
   char *category = NULL;
   char *selector = NULL;
 
+  unsigned int csym = 0;
+  unsigned int cdebug = 0;
+
+  unsigned int ncsym = 0;
+  unsigned int ncdebug = 0;
+
   char *buf = NULL;
   char *tmp = NULL;
 
-  int selector_case = 0;
+  gdb_assert (nsym != NULL);
+  gdb_assert (ndebug != NULL);
 
-  gdb_assert (symbol_names != NULL);
+  if (nsym != NULL)
+    *nsym = 0;
+  if (ndebug != NULL)
+    *ndebug = 0;
 
   buf = (char *) alloca (strlen (method) + 1);
   strcpy (buf, method);
@@ -1131,37 +1340,99 @@ find_imps (char *method, VEC (const_char_ptr) **symbol_names)
 
   if (tmp == NULL)
     {
+      struct symbol *sym = NULL;
+      struct minimal_symbol *msym = NULL;
+
       strcpy (buf, method);
       tmp = parse_selector (buf, &selector);
 
       if (tmp == NULL)
 	return NULL;
 
-      selector_case = 1;
-    }
-
-  find_methods (type, class, category, selector, symbol_names);
-
-  /* If we hit the "selector" case, and we found some methods, then
-     add the selector itself as a symbol, if it exists.  */
-  if (selector_case && !VEC_empty (const_char_ptr, *symbol_names))
-    {
-      struct symbol *sym = lookup_symbol (selector, NULL, VAR_DOMAIN, 0);
-
+      sym = lookup_symbol (selector, block, VAR_DOMAIN, 0);
       if (sym != NULL) 
-	VEC_safe_push (const_char_ptr, *symbol_names,
-		       SYMBOL_NATURAL_NAME (sym));
-      else
 	{
-	  struct minimal_symbol *msym = lookup_minimal_symbol (selector, 0, 0);
+	  if (syms)
+	    syms[csym] = sym;
+	  csym++;
+	  cdebug++;
+	}
 
-	  if (msym != NULL) 
-	    VEC_safe_push (const_char_ptr, *symbol_names,
-			   SYMBOL_NATURAL_NAME (msym));
+      if (sym == NULL)
+	msym = lookup_minimal_symbol (selector, 0, 0);
+
+      if (msym != NULL) 
+	{
+	  if (syms)
+	    syms[csym] = (struct symbol *)msym;
+	  csym++;
 	}
     }
 
-  uniquify_strings (symbol_names);
+  if (syms != NULL)
+    find_methods (symtab, type, class, category, selector, 
+		  syms + csym, &ncsym, &ncdebug);
+  else
+    find_methods (symtab, type, class, category, selector, 
+		  NULL, &ncsym, &ncdebug);
+
+  /* If we didn't find any methods, just return.  */
+  if (ncsym == 0 && ncdebug == 0)
+    return method;
+
+  /* Take debug symbols from the second batch of symbols and swap them
+   * with debug symbols from the first batch.  Repeat until either the
+   * second section is out of debug symbols or the first section is
+   * full of debug symbols.  Either way we have all debug symbols
+   * packed to the beginning of the buffer.
+   */
+
+  if (syms != NULL) 
+    {
+      while ((cdebug < csym) && (ncdebug > 0))
+	{
+	  struct symbol *s = NULL;
+	  /* First non-debugging symbol.  */
+	  unsigned int i = cdebug;
+	  /* Last of second batch of debug symbols.  */
+	  unsigned int j = csym + ncdebug - 1;
+
+	  s = syms[j];
+	  syms[j] = syms[i];
+	  syms[i] = s;
+
+	  /* We've moved a symbol from the second debug section to the
+             first one.  */
+	  cdebug++;
+	  ncdebug--;
+	}
+    }
+
+  csym += ncsym;
+  cdebug += ncdebug;
+
+  if (nsym != NULL)
+    *nsym = csym;
+  if (ndebug != NULL)
+    *ndebug = cdebug;
+
+  if (syms == NULL)
+    return method + (tmp - buf);
+
+  if (csym > 1)
+    {
+      /* Sort debuggable symbols.  */
+      if (cdebug > 1)
+	qsort (syms, cdebug, sizeof (struct minimal_symbol *), 
+	       compare_classes);
+      
+      /* Sort minimal_symbols.  */
+      if ((csym - cdebug) > 1)
+	qsort (&syms[cdebug], csym - cdebug, 
+	       sizeof (struct minimal_symbol *), compare_classes);
+    }
+  /* Terminate the sym_arr list.  */
+  syms[csym] = 0;
 
   return method + (tmp - buf);
 }
@@ -1609,9 +1880,6 @@ resolve_msgsend_super_stret (CORE_ADDR pc, CORE_ADDR *new_pc)
     return 1;
   return 0;
 }
-
-/* Provide a prototype to silence -Wmissing-prototypes.  */
-extern initialize_file_ftype _initialize_objc_lang;
 
 void
 _initialize_objc_lang (void)
